# SPA

./: .gitignore  README.md  out.txt
Team05/Code05/src/spa/: CMakeLists.txt
Team05/Code05/src/spa/src/: Parser.cpp
Team05/Code05/src/spa/src/PKB/: Modifies.cpp  Modifies.h  ModifiesData.cpp  ModifiesData.h  ModifiesTable.cpp  ModifiesTable.h  PKB.cpp  PKB.h  PKBCache.cpp  PKBCache.h  PKBRead.cpp  PKBRead.h  PKBRelationTable.cpp  PKBRelationTable.h  PKBResult.h  PKBStub.cpp  PKBStub.h  PKBWrite.cpp  PKBWrite.h  Table.cpp  Table.h
Team05/Code05/src/spa/src/PKB/data/: AffectsData.cpp  AffectsData.h  AssignData.cpp  AssignData.h  CallsData.cpp  CallsData.h  ConditionData.cpp  ConditionData.h  Data.cpp  Data.h  DataWrapper.cpp  DataWrapper.h  Export.h  FollowData.h  FollowsData.cpp  FollowsData.h  ModifiesData.cpp  ModifiesData.h  NextData.cpp  NextData.h  ParentData.cpp  ParentData.h  Types.h  UsesData.cpp  UsesData.h  WithData.h
Team05/Code05/src/spa/src/PKB/results/: ModifiesResult.h  QueryResult.cpp  QueryResult.h  Result.h
Team05/Code05/src/spa/src/QPS/: Main.cpp  Main.h  QPS.cpp  QPS.h
Team05/Code05/src/spa/src/SP/: CFGExtractor.h  DesignExtractor.cpp  DesignExtractor.h  Lexer.cpp  Lexer.h  PKBWriter.h  Parser.cpp  Parser.h  SourceProcessor.cpp  SourceProcessor.h
Team05/Code05/src/spa/src/common/: Exceptions.h  Utiity.h  Utility.cpp  Utility.h
Team05/Code05/src/spa/src/models/: Entity.cpp  Entity.h  EntityExport.h  EntityStub.cpp  EntityStub.h  IdentEntity.cpp  IdentEntity.h  IntEntity.cpp  IntEntity.h  Stmt.cpp  Stmt.h  models.h  types.h
docs/: index.md  (+2 more)
(+636 files in other folders)
